package com.directi.training.isp.exercise_refactored;

public interface ProximityDoorClient
{
    void proximityCallback();
}