package com.directi.training.isp.exercise_refactored;

public interface TimedDoorClient
{
    void timeOutCallback();
}